force-app/main/default/objects/Account/fields/Available_Value__c.field-meta.xml
<CustomField>
    <fullName>Available_Value__c</fullName>
    <formula>Total_Value__c   - Sponsorship_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>