force-app/main/default/objects/Account/fields/Sponsorship_Value__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Value__c</fullName>
    <label>Sponsorship Value</label>
    <summarizedField>Sponsorship__c.Value__c</summarizedField>
    <summaryForeignKey>Sponsorship__c.Sponsor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>