force-app/main/default/objects/Account/fields/test_sp__c.field-meta.xml
<CustomField>
    <fullName>test_sp__c</fullName>
    <label>test sp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>