force-app/main/default/objects/Account/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <label>Total Value</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>