force-app/main/default/objects/Account/validationRules/TotalValueLess_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalValueLess_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Value__c &lt;  Sponsorship_Value__c</errorConditionFormula>
    <errorDisplayField>Total_Value__c</errorDisplayField>
    <errorMessage>Total amount is less than the amount in sponsorships Current</errorMessage>
</ValidationRule>